 * Gracefully handle multiple deltatext blocks for same revision.
 * Be more careful about only processing reasonable *,v files.
 * Improve checks for illegal filenames.
 * Check if a directory name conflicts with a filename.
 * When file is imported, omit the empty revision 1.1.
 * If a non-trunk default branch is excluded, graft its contents to trunk.
 * Require --symbol-transform pattern to match entire symbol name.
 * Treat files as binary by default instead of as text, because it is safer.
 * Treat auto-props case-insensitively; deprecate --auto-props-ignore-case.

 Miscellaneous:
 * Add a simple (nonportable) script to log cvs2svn memory usage.
 * Allow contrib/shrink_test_case.py script to try deleting tags and branches.
 * Add --skip-initial-test option to contrib/shrink_test_case.py script.


Version 1.5.1 (28 January 2007)
-------------------------------

 Bugs fixed:
 * Add missing import in cvs2svn_lib/process.py.
 * Fix omission of parsing of the --fallback-encoding option.


Version 1.5.0 (03 October 2006)
-------------------------------

 New features:
 * Support multiproject conversions (each gets its own trunk, tags, branches).
 * New --options option to allow run-time options to be defined via a file.
 * --co, --cvs, and --sort options to specify the paths to executables.
 * Add new --fallback-encoding option.

 Bugs fixed:
 * Fix issue #86: Support multiple project roots per repository.
 * Fix issue #104: Allow path to "sort" executable to be specified.
 * Fix issue #8: Allow multiple --encoding options.
 * Fix issue #109: Improve handling of fallback encodings.

 Improvements and output changes:
 * Further reduce conversion time and temporary space requirements.

 Miscellaneous:
 * Deprecate the --dump-only option (it is now implied by --dumpfile).
 * Add scripts to help isolate conversion problems and shrink test cases.
 * Add a script to search for illegal filenames in a CVS repository.


Version 1.4.0 (27 August 2006)